gccida/c2/signed_or_unsigned_type
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:1975:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:1976:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:1977:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2033:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 5); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2033:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 5); 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2041:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 4); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2041:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 4); 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2049:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 3); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2049:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 3); 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2057:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 2); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2057:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 2); 
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2065:19: error: expected expression
v8 = ( tree_node *)*( &global_trees + 1); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/c-common.c:2065:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)*( &global_trees + 1); 
       ^
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/signed_or_unsigned_type/src/obj/c-common.o] Error 1
